<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="答疑"
            android:textColor="@color/textTitleColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_right_title"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_shape_circle_blue_click"
            android:text="我的提问"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_refresh_net"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/net_error" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/all_margin_left"
            android:layout_marginRight="@dimen/all_margin_right"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_hand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/biaoqian1"
                    android:gravity="center"
                    android:text="手动定位"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_one_key_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignBaseline="@+id/tv_hand"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:text="@string/dayi_one_key_clear"
                    android:textColor="@color/textHoldColor" />
            </RelativeLayout>


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_radio_btn"
                    android:checked="true"
                    android:padding="5dp"
                    android:text="@string/dayi_long_men"
                    android:textColor="@color/textHoldColor" />

                <RadioButton
                    android:id="@+id/radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:button="@drawable/custom_radio_btn"
                    android:padding="5dp"
                    android:text="@string/dayi_no_longmen"
                    android:textColor="@color/textHoldColor" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/btn_nianji_chose"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_shape_circle_click"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nianji_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:text="年级:"
                        android:textColor="@color/textHoldColor" />

                    <TextView
                        android:id="@+id/nianji_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/nianji_tip"
                        android:hint="请选择"
                        android:text="请选择"
                        android:textColor="@color/textColor" />

                    <ImageView
                        android:id="@+id/nianji_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/xuanze1" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_xueke_chose"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_shape_circle_click"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/xueke_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:text="学科:"
                        android:textColor="@color/textHoldColor" />

                    <TextView
                        android:id="@+id/xueke_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/xueke_tip"
                        android:hint="请选择"
                        android:text="请选择"
                        android:textColor="@color/textColor" />

                    <ImageView
                        android:id="@+id/xueke_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/xuanze1" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/btn_shujie_chose"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_shape_circle_click"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/shujie_chose_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:text="@string/shu_jie_close_title"
                        android:textColor="@color/textHoldColor" />

                    <TextView
                        android:id="@+id/shujie_chose_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/shujie_chose_img"
                        android:layout_toRightOf="@+id/shujie_chose_tip"
                        android:hint="请选择"
                        android:text="请选择"
                        android:textColor="@color/textColor" />

                    <ImageView
                        android:id="@+id/shujie_chose_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/xuanze1" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/biaoqian2"
                android:gravity="center"
                android:text="答疑描述"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_rectangle_gray"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_miaoshu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:gravity="left"
                    android:hint="请输入问题描述（APP使用类问题请到“我的”-“帮助及反馈”中免费交流）"
                    android:maxLength="140"
                    android:minHeight="80dp"
                    android:padding="5dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <!-- 录制和暂停录制按钮-->
                <ImageView
                    android:id="@+id/iv_play_or_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ks" />

                <!--录音播放暂停删除父布局-->
                <RelativeLayout
                    android:id="@+id/rl_lv_yin"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/btn_ly_shape_circle_unclick"
                    android:orientation="horizontal">

                    <!--播放和停止播放按钮-->
                    <ImageButton
                        android:id="@+id/tip_ly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"

                        android:background="@drawable/bf1" />

                    <!--播放时间-->
                    <TextView
                        android:id="@+id/lv_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_toRightOf="@+id/tip_ly"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/textHoldColor" />

                    <!--删除录音的按钮-->
                    <ImageView
                        android:id="@+id/iv_delete_lu_yin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/shanchu"
                        android:visibility="gone" />
                </RelativeLayout>


                <ImageView
                    android:id="@+id/iv_auditions"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:padding="@dimen/dp_5"
                    android:src="@drawable/bofangxiao"
                    android:visibility="gone" />

                <!--完成录音的按钮-->
                <TextView
                    android:id="@+id/dayi_tv_ly_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/btn_ly_shape_circle_unclick"
                    android:enabled="false"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="5dp"
                    android:text="@string/btn_audio_successful"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/btn_tijiao_tiwen"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_all_shape_circle_click"
                android:gravity="center"
                android:text="提交问题"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/biaoqian3"
                android:gravity="center"
                android:text="推荐问题"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            </androidx.recyclerview.widget.RecyclerView>

            <software.ecenter.study.View.AutoSplitTextView
                android:id="@+id/tv_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:textColor="@color/textHoldColor" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>